--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
-
   "dependencies": {
     "@apollo/client": "^3.6.4",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
@@ -55,21 +54,21 @@
     "@graphql-codegen/typescript-graphql-files-modules": "2.1.1",
     "@graphql-codegen/typescript-operations": "2.4.0",
     "@graphql-codegen/typescript-react-apollo": "3.2.14",
-    "@types/node": "^16.11.36",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.4",
     "@testing-library/cypress": "^8.0.3",
     "@types/jest": "^28.1.1",
     "@types/leaflet": "^1.7.11",
+    "@types/node": "^16.11.36",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.4",
     "apollo": "^2.34.0",
-    "autoprefixer": "^10.4.7",
+    "autoprefixer": "^10.4.19",
     "file-loader": "^6.2.0",
     "jest": "^28.1.1",
     "postcss": "^8.4.14",
-    "tailwindcss": "^3.0.24",
+    "postcss-cli": "^11.0.0",
+    "tailwindcss": "^3.4.3",
     "ts-jest": "^28.0.4"
   },
-
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -88,7 +87,6 @@
       "last 1 safari version"
     ]
   },
-
   "jest": {
     "collectCoverageFrom": [
       "./src/*.tsx",
