--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,11 +15,12 @@
     "jsx": "react-jsx",
 
     /* Linting */
+    "noImplicitAny": false,
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
+  "include": ["src","src/custom.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
