--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "food-deli-app-inspired-by-uber-eats-client",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,65 +10,68 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@apollo/client": "^3.6.4",
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-regular-svg-icons": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/react-fontawesome": "^0.1.18",
-    "@graphql-codegen/cli": "^2.6.2",
-    "@graphql-codegen/typescript": "^2.4.11",
-    "@tailwindcss/aspect-ratio": "^0.4.0",
-    "@tailwindcss/forms": "^0.5.2",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.2.0",
-    "@testing-library/user-event": "^13.5.0",
-    "cypress": "^10.1.0",
+    "@apollo/client": "^3.9.11",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@graphql-codegen/cli": "^5.0.2",
+    "@graphql-codegen/typescript": "^4.0.6",
     "@headlessui/react": "^1.6.5",
     "@heroicons/react": "^1.0.6",
-    "filestack-js": "^3.25.0",
-    "graphql": "^16.5.0",
-    "graphql-ws": "^5.9.1",
-    "leaflet": "^1.8.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-hook-form": "^7.31.2",
-    "react-leaflet": "^4.0.1",
-    "react-phone-number-input": "^3.2.7",
-    "react-query": "^3.39.0",
-    "react-redux": "^8.0.2",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
-    "redux": "^4.2.0",
-    "redux-devtools-extension": "^2.13.9",
-    "redux-saga": "^1.1.3",
-    "typescript": "^4.6.4",
-    "uuid": "^8.3.2",
-    "victory": "^36.5.0",
-    "web-vitals": "^2.1.4"
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.7",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^15.0.4",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/node": "^20.12.7",
+    "cypress": "^13.8.0",
+    "graphql": "^16.8.1",
+    "graphql-ws": "^5.16.0",
+    "leaflet": "^1.9.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.3",
+    "react-leaflet": "^4.2.1",
+    "react-phone-number-input": "^3.4.0",
+    "react-query": "^3.39.3",
+    "react-redux": "^9.1.1",
+    "react-router-dom": "^6.23.0",
+    "redux": "^5.0.1",
+    "redux-saga": "^1.3.0",
+    "uuid": "^9.0.1",
+    "victory": "^37.0.2",
+    "web-vitals": "^3.5.2"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "2.6.2",
-    "@graphql-codegen/fragment-matcher": "3.2.1",
-    "@graphql-codegen/typescript": "2.4.11",
-    "@graphql-codegen/typescript-document-nodes": "2.2.11",
-    "@graphql-codegen/typescript-graphql-files-modules": "2.1.1",
-    "@graphql-codegen/typescript-operations": "2.4.0",
-    "@graphql-codegen/typescript-react-apollo": "3.2.14",
-    "@testing-library/cypress": "^8.0.3",
-    "@types/jest": "^28.1.1",
-    "@types/leaflet": "^1.7.11",
-    "@types/node": "^16.11.36",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.4",
+    "@graphql-codegen/fragment-matcher": "^5.0.2",
+    "@graphql-codegen/typescript-document-nodes": "^4.0.6",
+    "@graphql-codegen/typescript-graphql-files-modules": "^3.0.0",
+    "@graphql-codegen/typescript-operations": "^4.2.0",
+    "@graphql-codegen/typescript-react-apollo": "^4.3.0",
+    "@testing-library/cypress": "^10.0.1",
+    "@types/jest": "^29.5.12",
+    "@types/leaflet": "^1.9.12",
+    "@types/react": "^18.2.79",
+    "@types/react-dom": "^18.2.25",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "@vitejs/plugin-react-swc": "^3.5.0",
     "apollo": "^2.34.0",
     "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
     "file-loader": "^6.2.0",
-    "jest": "^28.1.1",
-    "postcss": "^8.4.14",
+    "jest": "^29.7.0",
+    "postcss": "^8.4.38",
     "postcss-cli": "^11.0.0",
     "tailwindcss": "^3.4.3",
-    "ts-jest": "^28.0.4"
+    "ts-jest": "^29.1.2",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.0"
   },
+
   "eslintConfig": {
     "extends": [
       "react-app",
